
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ms3m"
version = "0.1.0"
description = "Agentic Multi-Scale Structured State-Space Mixtures (MS3M) for 6G O-RAN"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BrainOmega (Pegah)"}]
dependencies = ["torch>=2.2","einops>=0.7","tqdm>=4.66","numpy>=1.24"]
